Fix build warnings by unused parameter https://bugs.webkit.org/show_bug.cgi?id=126867

Reviewed by Gyuyoung Kim.

Source/WebCore:

* Modules/indexeddb/leveldb/IDBServerConnectionLevelDB.cpp:
(WebCore::IDBServerConnectionLevelDB::changeDatabaseVersion): Remove unused parameter 'operation'.

Source/WebKit/efl:

* WebCoreSupport/EditorClientEfl.h:
(WebCore::EditorClientEfl::checkTextOfParagraph): Remove unused parameter 'checkingTypes'.


Canonical link: https://commits.webkit.org/144859@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@161860 268f45cc-cd09-0410-ab3c-d52691b4dbfc